--- a/scss/main.css
+++ b/scss/main.css
@@ -1,10 +1,11 @@
-body {
-  font-family: "Roboto", sans-serif;
-  text-decoration: none;
-  border: none;
+.button-style {
+  background-color: #0078d7;
+  color: #fff;
+  border-radius: 8px;
 }
 
-.hero > a > button {
-  background-color: #0078d7;
-  color: white;
+#avis {
+  width: 100%;
+  background-color: #fff;
+  display: flex;
 }/*# sourceMappingURL=main.css.map */
