--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,5 @@
-body {
-  height: 100vh;
-  margin: 0;
-}
-
-.badge {
-  height: 30%;
-  position: absolute;
-}
-img {
-  height: 200px;
-  object-fit: cover;
-}
+@import "header";
+@import "footer";
+@import "mixins";
+@import "responsive";
+@import "variables";
