--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,8 @@
 @import "_variables.scss";
+@import "_mixins.scss";
+@import "_responsive.scss";
+@import "_footer.scss";
+@import "_header.scss";
 
 #avis {
   width: 100%;
