--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,8 +4,29 @@
 @import "_footer.scss";
 @import "_header.scss";
 
+* {
+  margin: 0;
+}
+
 #avis {
   width: 100%;
   background-color: $main-color;
-  display: flex;
+  > div {
+    display: flex;
+    .card {
+      // display: flex;
+      > div:first-child {
+        display: flex;
+        width: 100px;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        overflow: hidden;
+        img:first-child {
+          width: 100%;
+          aspect-ratio: 1;
+          object-fit: cover;
+        }
+      }
+    }
+  }
 }
